<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBG"
    tools:context=".activities.EditOrCreateNoteActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/titleHint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:minHeight="48dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/descriptionHint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:singleLine="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edtTitle"
                app:layout_constraintStart_toStartOf="@+id/edtTitle"
                app:layout_constraintTop_toBottomOf="@+id/edtTitle"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/colorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/grayBG"
                app:cardCornerRadius="10dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerBlue"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_blue"
                                app:srcCompat="@color/picker_blue" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerGray"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_gray"
                                app:srcCompat="@color/picker_gray" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerRed"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_red"
                                app:srcCompat="@color/picker_red"
                                tools:ignore="ImageContrastCheck" />
                        </androidx.cardview.widget.CardView>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerYellow"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_yellow"
                                app:srcCompat="@color/picker_yellow"
                                tools:ignore="ImageContrastCheck" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerPurple"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_purple"
                                app:srcCompat="@color/picker_purple" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            app:cardCornerRadius="10dp">

                            <ImageButton
                                android:id="@+id/imbPickerBlack"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:contentDescription="@string/picker_black"
                                app:srcCompat="@color/picker_black" />
                        </androidx.cardview.widget.CardView>
                    </TableRow>

                </TableLayout>

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>